--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "@react-oauth/google": "^0.12.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "axios": "^1.6.8",
     "react": "^18.2.0",
@@ -31,4 +32,5 @@
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.4"
   }
+  
 }
